Address nullness errors in `it` module.